# OOP

./: List.cpp  List.h  MyIteraror.h  OOP1-2.cpp  OOP1-2.h  OOP2.cpp  OOP2.h  OOP3.cpp  OOP3.h  OOP4.cpp  OOP4.h  OOP_5.h  Point.cpp  Point.h  README.md  Romb.cpp  Romb.h  Triangle.cpp  Triangle.h
OOP5/: Myiterator.cpp  OOP_5.cpp  Stack.cpp  Stack.h
OOP6/: CMakeLists.txt  allocator.h  octagon.h  oop_6.cpp  oop_6.h  vertex.h
OOP7/: OOP7.cpp  OOP7.h  document.hpp  factory.hpp  figure.hpp  pentagon.hpp  rhomb.hpp  trapeze.hpp
OOP8/: CMakeLists.txt  OOP_8.cpp  OOP_8.h  document.hpp  factory.hpp  figure.hpp  octagon.hpp  point.hpp  processor.hpp  square.hpp  subscriber.hpp  triangle.hpp
